--- a/app/globals.css
+++ b/app/globals.css
@@ -10,11 +10,13 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: url("./Assets/Images/background.png");  
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  backdrop-filter: brightness(40%);
-  background-color: #e0edf5;
   font-family: 'Poppins', sans-serif;
+  background-color: #E0EDF5;
+}
+
+.material-symbols-rounded {
+  font-family: 'Material Symbols Rounded', sans-serif;
+  font-weight: normal;
+  font-style: normal;
+  font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 48;
 }
