Update: Body background color changed.
Fix-try: Tried to fix Three but didn't success.

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
-  background-color: #E0EDF5;
+  background-color: #28617F;
 }
 
 .material-symbols-rounded {
